--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -12,6 +12,11 @@
         android:theme="@style/Theme.AudaciousSelfPromoApp"
         tools:targetApi="31">
         <activity
+            android:name=".PreviewActivity"
+            android:exported="false"
+            android:label="Message Preview"
+            android:parentActivityName=".MainActivity" />
+        <activity
             android:name=".MainActivity"
             android:exported="true">
             <intent-filter>
